@@ -1,5 +1,7 @@
 version ?
 
+* Corrected, hopefully finally, an issue of PAGE_SIZE, using getpagesize().
+
 * Added an option to use random records from file for url.
   One can load a 10000 records and use them in a random fashion for
   1000 clients. We are not ensuring uniquickness of records used.
@@ -7,6 +9,8 @@ version ?
   the number of records to load from a records file, and FORM_RECORDS_RANDOM,
   which says to the program to use the records loading randomly and not to link
   each records to a client by index.
+  Note, that tag FORM_RECORDS_FILE_MAX_NUM should be prior to the tag 
+  FORM_RECORDS_FILE.
   File with example of usage added is: ./conf-examples/random_file_records.conf
 
 version 0.42, stable, September 05, 2007, svn 503
